--- a/webApp/templates/incl_navbar.html
+++ b/webApp/templates/incl_navbar.html
@@ -18,6 +18,9 @@
                 <li class="nav-item">
                     <a class="nav-link {{mc['upload']}}" href="{{url_for('bl_upload.upload')}}">Upload</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link {{mc['log']}}" href="{{url_for('bl_log.log')}}">Logs</a>
+                </li>
             </ul>
         </div>
     </div>
