Added clear log button

--- a/webApp/templates/home/log.html
+++ b/webApp/templates/home/log.html
@@ -11,7 +11,9 @@
   <input name="display_logs" type="submit" value="Display Logs" />
 </form>
 <br>
-
+<a class="btn btn-secondary" href="{{url_for('bl_log.clear_logs')}}" role="button">Clear Log</a>
+<br>
+<br>
 <textarea rows="30" cols="120" id="log_output"></textarea>
 
 {% if display_logs %}
