Issue importing screen library in multiple places removing clear screen and disp new function from index

--- a/webApp/templates/home/index.html
+++ b/webApp/templates/home/index.html
@@ -31,7 +31,7 @@
       </table>
     <p>Change the configuration <a href="{{url_for('bl_home.config')}}">here</a></p>
     <!--<p>Display a new <a href="{{url_for('bl_home.new_random')}}">random </a>picture</p>-->
-    <a class="btn btn-primary" href="{{url_for('bl_home.new_random')}}" role="button">Display New Random Picture</a>
-    <a class="btn btn-primary" href="{{url_for('bl_home.clear_screen')}}" role="button">Clear Screen</a>
+    <a class="btn btn-primary" href="{{url_for('bl_home.new_random')}}" role="button">Generate New Random Picture</a>
+    <!-- <a class="btn btn-primary" href="{{url_for('bl_home.new_random')}}" role="button">Clear Screen</a> -->
 </div>
 {% endblock %}
